# online-retail-data-clustering

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
notebooks/: clustering.ipynb  online_retail_data_clustering.ipynb
